cmake_minimum_required(VERSION 3.25)
project(practice)

set(CMAKE_CXX_STANDARD 11)

add_executable(practice binary_search.cpp)

add_executable(double_pointer double_pointer.cpp)
add_executable(double_pointer2 double_pointer2.cpp)
add_executable(slide_window slide_window.cpp)
add_executable(Spiral_matrix Spiral_matrix.cpp)
add_executable(remove_element remove_element.cpp)
add_executable(design_list design_list.cpp)
add_executable(reverse_list reverse_list.cpp)
add_executable(Swap_adjacent_elements Swap_adjacent_elements.cpp)
add_executable(removeNthFromEnd removeNthFromEnd.cpp)
add_executable(getIntersectionNode getIntersectionNode.cpp)
add_executable(circular_List circular_List.cpp)
add_executable(Letter_heterotopic_word Letter_heterotopic_word.cpp)
add_executable(vector_intersection vector_intersection.cpp)
add_executable(happy_num happy_num.cpp)
add_executable(twoSum twoSum.cpp)
add_executable(fourSumCount fourSumCount.cpp)
add_executable(canConstruct canConstruct.cpp)
add_executable(threeSum threeSum.cpp)
add_executable(fourSum fourSum.cpp)
add_executable(reverseString reverseString.cpp)
add_executable(reverseString2 reverseString2.cpp)
add_executable(replace_space replace_space.cpp)
add_executable(Invert_Word Invert_Word.cpp)
add_executable(reverseLeftwords reverseLeftwords.cpp)
add_executable(strStr strStr.cpp)
add_executable(repeatedSubstringPattern repeatedSubstringPattern.cpp)
add_executable(MyQueue MyQueue.cpp)
add_executable(MyStack MyStack.cpp)
add_executable(isValid isValid.cpp)
add_executable(removeDuplicates removeDuplicates.cpp)
add_executable(evalRPN evalRPN.cpp)
add_executable(maxSlidingWindow maxSlidingWindow.cpp)
add_executable(topKFrequence topKFrequence.cpp)
add_executable(Recursive_traversal_of_binary_tree Recursive_traversal_of_binary_tree.cpp)
add_executable(Iterative_traversal_of_binary_tree Iterative_traversal_of_binary_tree.cpp)
add_executable(Sequence_traversal_of_binary_tree Sequence_traversal_of_binary_tree.cpp)
add_executable(Flip_binary_tree Flip_binary_tree.cpp)
add_executable(Symmetric_binary_tree Symmetric_binary_tree.cpp)
add_executable(binary_tree_maxdepth binary_tree_maxdepth.cpp)
add_executable(binary_tree_mindepth binary_tree_mindepth.cpp)
add_executable(complete_binary_tree_NumNode complete_binary_tree_NumNode.cpp)

add_executable(balanced_binary_tree balanced_binary_tree.cpp)
add_executable(binary_tree_paths binary_tree_paths.cpp)
add_executable(sumOf_LeftLeaves sumOf_LeftLeaves.cpp)
add_executable(find_LeftValue find_LeftValue.cpp)
add_executable(has_pathSum has_pathSum.cpp)
add_executable(Construct_binary_tree Construct_binary_tree.cpp)
add_executable(max_binary_tree max_binary_tree.cpp)
add_executable(Merge_binary_tree Merge_binary_tree.cpp)
add_executable(searchBST searchBST.cpp)
add_executable(validate_BST validate_BST.cpp)
add_executable(BST_minDifference BST_minDifference.cpp)
add_executable(BST_mode BST_mode.cpp)
add_executable(lowestCommonAncestor lowestCommonAncestor.cpp)
add_executable(BST_lowestCommonAncestor BST_lowestCommonAncestor.cpp)
add_executable(BST_Insert BST_Insert.cpp)
add_executable(BST_deleteNode BST_deleteNode.cpp)
add_executable(trimBST trimBST.cpp)
add_executable(SortedArrayToBST SortedArrayToBST.cpp)
add_executable(BST_to_GreaterSumTree BST_to_GreaterSumTree.cpp)
add_executable(combine combine.cpp)
add_executable(combinationSum3 combinationSum3.cpp)
add_executable(letterCombinations letterCombinations.cpp)
add_executable(combinationSum combinationSum.cpp)
add_executable(combinationSum2 combinationSum2.cpp)
add_executable(Split_palindrome_string Split_palindrome_string.cpp)
add_executable(restoreIP restoreIP.cpp)
add_executable(subset subset.cpp)
add_executable(subset2 subset2.cpp)
add_executable(increasing_subsequence  "increasing_subsequence .cpp")
add_executable(Permutations Permutations.cpp)
add_executable(Permutations2 Permutations2.cpp)
add_executable(Swing_sequence Swing_sequence.cpp)
add_executable(maxSubArray maxSubArray.cpp)
add_executable(buy_or_sell_stocks2 buy_or_sell_stocks2.cpp)
add_executable(canJump canJump.cpp)
add_executable(canJump2 canJump2.cpp)
add_executable(largestSumAfterKNegations largestSumAfterKNegations.cpp)
add_executable(gas_station gas_station.cpp)
add_executable(Distribute_candy Distribute_candy.cpp)
add_executable(give_change give_change.cpp)
add_executable(reconstructQueue reconstructQueue.cpp)
add_executable(findMinArrowShots findMinArrowShots.cpp)
add_executable(No_overlapping_interval No_overlapping_interval.cpp)
add_executable(partitionLabels partitionLabels.cpp)
add_executable(Merge_interval Merge_interval.cpp)
add_executable(monotonic_increase monotonic_increase.cpp)
add_executable(Fibonacci_sequence Fibonacci_sequence.cpp)
add_executable(climbStairs climbStairs.cpp)
add_executable(minCostClimbStairs minCostClimbStairs.cpp)
add_executable(uniquePath uniquePath.cpp)
add_executable(uniquePath2 uniquePath2.cpp)
add_executable(integer_partition integer_partition.cpp)
add_executable(0-1Knapsack 0-1Knapsack.cpp)
add_executable(canPartition canPartition.cpp)
add_executable(lastStoneWeight2 lastStoneWeight2.cpp)
add_executable(targetSumWays targetSumWays.cpp)
add_executable(findMaxForm findMaxForm.cpp)
add_executable(change2 change2.cpp)
add_executable(combinationSum4 combinationSum4.cpp)
add_executable(climbStairs2 climbStairs2.cpp)
add_executable(change change.cpp)
add_executable(numSquares numSquares.cpp)
add_executable(wordBreak wordBreak.cpp)
add_executable(rob rob.cpp)
add_executable(rob2 rob2.cpp)
add_executable(rob3 rob3.cpp)
add_executable(maxProfit maxProfit.cpp)
add_executable(maxProfit3 maxProfit3.cpp)
add_executable(maxProfit5 maxProfit5.cpp)
add_executable(maxProfit6 maxProfit6.cpp)
add_executable(lengthOfLTS lengthOfLTS.cpp)
add_executable(findLengthOfLCTS findLengthOfLCTS.cpp)
add_executable(findLength findLength.cpp)
add_executable(longestCommonSub longestCommonSub.cpp)
add_executable(isSubsequence isSubsequence.cpp)
add_executable(countSubString countSubString.cpp)
add_executable(longestPalindromeSubseq longestPalindromeSubseq.cpp)
add_executable(dailyTemperatures dailyTemperatures.cpp)
add_executable(nextGreaterElement nextGreaterElement.cpp)
add_executable(nextGreaterElement2 nextGreaterElement2.cpp)
add_executable(distribute_cookies distribute_cookies.cpp)